[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PhyloDist"
authors = [
    {name = "Pauline Mermillod", email = "pauline.mermillod@etu.unistra.fr"},
    {name = "Martin Schoenstein", email = "martin.schoenstein@etu.unistra.fr"}
]
description = "Compute distance between phylogenetic profiles"
readme = "README.rst"
version = "0.1.0"
requires-python = ">=3.1"
keywords = [
    "distance-metrics",
    "phylogenetics",
    "binary-profiles",
    "similarity-metrics",
    "comparative-genomics",
    "cotransition",
    "transition-vectors",
]
license = {text = "LGPL-3.0"}

dependencies = [
    'biopython==1.84',
    'numpy==2.1.3',
    'pandas==2.2.3',
    'scikit-learn==1.5.2',
    'scipy==1.14.1'
]


[tool.ruff]
lint.select = ["N"]